systemd System and Service Manager

   systemd (214.10-dev)
~~~~~~~
 * core:
 	- remove initramfs support;
 * libsystemd:
 	- remove “bus_message_map_properties_changed” function;
 	- remove “BusTransport” enum;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 * systemctl:
 	- remove “list-machines” command;
 	- remove “recursive” argument option;
 	- remove “machine” argument option;
 * tests:
 	- remove “test-resolve” test;

   systemd (214.9)
~~~~~~~
 * core:
 	- remove dbus get properties: CanStart, CanStop, CanReload, CanIsolate;
 	- remove dbus “SwitchRoot” method;
 	- don't generate /{etc,run}/machine-id file;
 	- don't dispatch sd_notify() messages and SIGCHLD multiple times to the same units;
 	- allow informing systemd about service status changes with RELOADING=1 and STOPPING=1
 	  sd_notify() messages;
 	- use the right timeout for stop processes we fork;
 	- allow services of Type=oneshot that specify no ExecStart= commands;
 	- add support for a configurable system-wide start-up timeout;
 	- print 'startup finished' messages even if we log to console;
 	- introduce "poweroff" as new failure action types;
 	- split up “starting” manager state into “initializing” and “starting”;
 	- remove “x-initrd.mount” mount option;
 	- remove switch-root module;
 * libsystemd:
 	- don't generate bus-error-mapping.c source file;
 	- split sd-event run into prepare/wait/dispatch;
 	- remove unused call bus_kernel_create_monitor();
 	- split bus_map_all_properties into multiple helpers;
 	- fix use-after-free in slot-release;
 * logind:
 	- add HandleLidSwitchDocked= option to logind.conf + documentation;
 	- fix memory-leak on DropController();
 * units:
 	- order “systemd-fsck@.service” after “local-fs-pre.target”;