@@ -381,7 +381,6 @@ MANPAGES_ALIAS += \
 	man/sd_bus_negotiate_creds.3 \
 	man/sd_bus_negotiate_timestamps.3 \
 	man/sd_bus_open_system.3 \
-	man/sd_bus_open_system_container.3 \
 	man/sd_bus_path_decode.3 \
 	man/sd_bus_ref.3 \
 	man/sd_bus_release_name.3 \
@@ -439,7 +438,6 @@ man/sd_bus_message_get_seqnum.3: man/sd_bus_message_get_monotonic_usec.3
 man/sd_bus_negotiate_creds.3: man/sd_bus_negotiate_fds.3
 man/sd_bus_negotiate_timestamps.3: man/sd_bus_negotiate_fds.3
 man/sd_bus_open_system.3: man/sd_bus_open_user.3
-man/sd_bus_open_system_container.3: man/sd_bus_open_user.3
 man/sd_bus_path_decode.3: man/sd_bus_path_encode.3
 man/sd_bus_ref.3: man/sd_bus_new.3
 man/sd_bus_release_name.3: man/sd_bus_request_name.3
@@ -585,9 +583,6 @@ man/sd_bus_negotiate_timestamps.html: man/sd_bus_negotiate_fds.html
 	$(html-alias)
 
 man/sd_bus_open_system.html: man/sd_bus_open_user.html
-	$(html-alias)
-
-man/sd_bus_open_system_container.html: man/sd_bus_open_user.html
 	$(html-alias)
 
 man/sd_bus_path_decode.html: man/sd_bus_path_encode.html
