@@ -45,7 +45,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
   <refnamediv>
     <refname>sd_bus_open_user</refname>
     <refname>sd_bus_open_system</refname>
-    <refname>sd_bus_open_system_container</refname>
 
     <refname>sd_bus_default_user</refname>
     <refname>sd_bus_default_system</refname>
@@ -64,12 +63,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
 
       <funcprototype>
         <funcdef>int <function>sd_bus_open_system</function></funcdef>
-        <paramdef>sd_bus **<parameter>bus</parameter></paramdef>
-      </funcprototype>
-
-      <funcprototype>
-        <funcdef>int <function>sd_bus_open_system_container</function></funcdef>
-        <paramdef>const char *<parameter>machine</parameter></paramdef>
         <paramdef>sd_bus **<parameter>bus</parameter></paramdef>
       </funcprototype>
 
